# lazy-winapi.c

./: CMakeLists.txt  CMakeLists_8txt.html  README.md  README_8md.html  appveyor.yml  clipboard_8c.html  clipboard_8h.html  clipboard_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7496200f4f714032c533de4357c1c163.html  error_8c.html  error_8h.html  error_8h_source.html  files.html  gen_docs.sh  globals.html  globals_defs.html  globals_func.html  group__Clipboard.html  group__Error.html  group__Process.html  index.html  lazy__winapi_8h.html  lazy__winapi_8h_source.html  modules.html  process_8c.html  process_8h.html  process_8h_source.html
.cmake/Modules/: LazyUtils.cmake
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  defines_0.js  defines_1.js  files_0.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_6.js  groups_0.js  groups_1.js  groups_2.js  pages_0.js  searchdata.js
src/: lazy_winapi.h
src/lazy_winapi/: clipboard.c  clipboard.h  error.c  error.h  process.c  process.h
test/: clipboard.c  clipboard_mock.c  error.c  process.c
